--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "tmenu-admin-app",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
+    "@rmwc/icon": "^6.1.4",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/react": "^11.1.2",
+    "@testing-library/user-event": "^12.2.2",
+    "history": "^5.0.0",
+    "material-icons": "^0.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.0",
+    "rmwc": "^6.1.4",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
