--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tmenu-admin-app",
   "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "@rmwc/icon": "^6.1.4",
     "@testing-library/jest-dom": "^5.11.9",
